--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "js-yaml": ">=3.13.1",
+    "mem": ">=4.0.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -46,10 +48,9 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": ">=3.3.2",
-    "webpack-dev-server": ">=3.1.11",
-    "webpack-merge": "^4.1.0",
-    "mem": ">=4.0.0",
-    "js-yaml": ">=3.13.1"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": "12.8.0",
